# OpenGeoModeller

./: .gitmodules  LICENSE  README.en.md  README.md  docx2md.bat  push.bat  push.sh  sync.ffs_db
ESM/: README.md
ESM-Coupler/: README.md
ESM-Coupler/BMI/: README.md
ESM-Coupler/CESM/: README.md  cesm2.1.1.sh  config_compilers.xml.patch  nf_mod.F90.patch  pionfput_mod.F90.in.patch  pionfwrite_mod.F90.in.patch
ESM-Coupler/CLiMA/: ESM-as-a-puzzle.md  README.md  julia_list.md
ESM-Coupler/COAWST/: COAWST模拟系统学习20190116.docx  README.md
ESM-Coupler/CoastalApp/: README.md
ESM-Coupler/ESMF/: README.md
ESM-Coupler/MOSSCO/: README.md
ESM-Coupler/OASIS3-MCT/: README.md
ESM-Coupler/OpenMI/: README.md
ESM-Coupler/RegESM/: README.md  RegESM-github-Issues汇总20210915.docx  RegESM系统设计计划20211021.txt  安装RegESM采坑记录20210913.docx
ESM-Coupler/SCRIP/: README.md
ESM-Coupler/SCRIPPS/: README.md
ESM-Coupler/编译记录/: ESMF编译记录.txt  NetCDF安装记录.txt  Ubuntu18.04更新CMAKE3.12.txt  bashrc.lijian_laptop  installMITgcm.sh  安装openmpi.txt  更换编译器版本.txt
ESM/RegESM/: README.md
Geological-Modelling/: README.md
Geological-Modelling/AVO/: README.md
Geological-Modelling/GemPy/: README.md
Geological-Modelling/JTK/: README.md
Geological-Modelling/LoopStructural/: README.md
Geological-Modelling/Principles/: 各向异性介质中的FWI技术-Alkhalifah.docx  地震勘探原理-陆基孟.docx  蔡杰雄. 深度域地震层析反演速度建模方法与技术.docx
Geological-Modelling/SKUA-GOCAD/: README.md
Geophysics/: README.md
Geophysics/Devito/: FWI-HPC软件调研20230512.md  README.md
Geophysics/JUDI/: README.md  README_EN.md  build-judi.sh
Geophysics/OpenSWPC/: README.md
Geophysics/OpenSWPC-5.3.0/: README.md
Geophysics/RiDG/: README.md
Geophysics/Seissol/: 10 easi.sh  12 installing-sycl.txt  13 Compiling and running SeisSol.txt  3 hdf5-1.10.8.sh  4 netcdf-4.6.1.sh  5 eigen-3.4.0.sh  8 parmetis-4.0.3.sh  README.md
Geophysics/defmod-OpenSWPC/: README.md
Geophysics/defmod-swpc/: README.md
Geophysics/first-arrival-time-pick/: AIPycker安装说明.md  README.md
Geophysics/gprMAX/: README.md
Geophysics/pyGIMLi/: About-pyGIMLi.md  README.md  Seismic-refraction-and-traveltime-tomography.md
Geophysics/spyro/: README.md  SeismicMesh-install.md
Geophysics/stride/: README.md
GroundWater/: README.md
GroundWater/BloodFlow/: README.md
GroundWater/LBDEMcoupling/: README.md
GroundWater/LBM/: README.md
GroundWater/MODFLOW6/: README.md  install_SFRMaker.txt  install_mfsetup.txt  run_modflow6.txt
GroundWater/doc/: 地下模型列表20221109.docx
HPC/: README.md
HPC-Base/: README.md  docx2md.bat
HPC-Base/CUDA/: readme.md
HPC-Base/CUDA-aware MPI/: README.md
HPC-Base/CUDA-aware-MPI/: CUDA-aware MPI学习20190605.docx  CUDA-aware MPI学习20190605.md  CUDA-aware-MPI_20190605.md
HPC-Base/CUDA-learning/: CUDA原子操作API.docx  CUDA常量内存.txt  CUDA编程学习20201208.docx  CUDA设备全局变量.txt  Multi_GPU and GPU cluster.docx  Nvidia GPU的TCC模式与WDDM模式有何区别 .txt  global与device函数不在一个文件中.txt  install intel-nvidia driver.md  详谈NVMe和NVMe-oF架构和知识点.docx
HPC-Base/Compilation/: README.md
HPC-Base/Compilation/CMake/cmake_practice/src/: CMakeLists.txt
HPC-Base/Compilation/Meson/meson-cpp-template-basic/: LICENSE  README.md  build.py  depcheck.py  meson.build
HPC-Base/Compilation/Meson/meson-cpp-template-basic/include/: mymath.hpp  sqrt.hpp
HPC-Base/Compilation/Meson/meson-cpp-template-basic/lib/: sqrt.cpp
HPC-Base/Compilation/Meson/meson-cpp-template-basic/src/: main.cpp  mymath.cpp
HPC-Base/DSL/: README.md
HPC-Base/Domain-Decomposition/: README.md  SCOTCH_install.md  SCOTCH_install.txt  Zoltan与Parmetis分区函数比较.docx
HPC-Base/GPUDirect/: GPUDirect Storage O_DIRECT.docx  GPUDirect Storage技术介绍2021.docx  GPUDirect_Async学习20210119.docx  GPUDirect_P2P技术20210119.docx  GPUDirect_RDMA技术20210123.docx  GPUDirect技术需要的软硬件20201123.docx  README.md  程润伟_跨GPU集群扩展应用程序.docx
HPC-Base/HPC-IO/: README.md  VTK-for-Parallelisation.md
Hemodynamics/: README.md
Hydrology/: README.md
Mesh-Generation/: README.md  非结构网格生成及编辑.md
Meshing/: README.md
Meteorology/: NCAR_NCL_install.md  README.md
Meterology/: README.md
Porous-Media-Flow/: README.md
Reservoir/: README.md  library-template.sh
Seismics/: README.md
Seismics-Interpretation/: README.md
ShallowWater/: README.md
SurfaceWater/: README.md
Survery-GeologicModel/: README.md
Turbulence/: README.md
Underground/: README.md
VirtualReality/: README.md
VirtualReality/In-situ-Visualization/MandelbrotCatalyst2-main/: CMakeLists.txt  CatalystAdaptor.h  Mandelbrot.cu  driver.cxx  pipeline.py
VirtualReality/In-situ-Visualization/catalyst/MandelbulbCatalystExample/: CMakeLists.txt
VirtualReality/In-situ-Visualization/catalyst/MandelbulbCatalystExample/src/: InSituAdaptor.hpp  Mandelbulb.cpp
VirtualReality/In-situ-Visualization/catalyst/lulesh-adios-catalyst/lulesh-adios-catalyst/: CMakeLists.txt  lulesh-ascent.h  lulesh-catalyst.h  lulesh-init.cc  lulesh.cc
VirtualReality/In-situ-Visualization/catalyst/lulesh-adios-catalyst/lulesh-adios-catalyst/Ascent/: ascent_actions.yaml  trigger_ascent_actions.yaml
VirtualReality/In-situ-Visualization/catalyst/lulesh-adios-catalyst/lulesh-adios-catalyst/Ascent/ParaViewBridge/: ascent_actions.yaml
VirtualReality/In-situ-Visualization/catalyst/lulesh-adios-catalyst/lulesh-adios-catalyst/Catalyst/: catalyst.py  pvAscent-Catalyst-Bridge.py
(+3498 files in other folders)
